Fix navbar color and avoid horizontal scroll

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -15,6 +15,9 @@ $theme-colors: (
     "danger":     #ed190c,
 );
 
+body {
+    overflow-x: hidden;
+}
 .navbar-nav .nav-item {
     display: inline-flex;
     align-items: center;
@@ -22,5 +25,6 @@ $theme-colors: (
 
 .navbar-nav .nav-item:not(:last-child)::after {
     content: ' - ';
+    color: $white;
 }
 
